--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 	<!-- Enable responsive viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="baidu-site-verification" content="fkVXkUbHNR" />
-        <meta name="keywords" content="晨曦, 博客, Django, Python, Matlab, zfb, zfb132, Android, Web, IT">
+        <meta name="keywords" content="学习笔记, 博客, Python, zfx, ZFX521, Android, Web">
 
 	<!-- 国产高速渲染 -->
 	<meta name="renderer" content="webkit">
@@ -74,11 +74,7 @@
                 </ul>
 				<style>p.copyright.text-muted {color: #bfbfbf;} </style>
 				<p class="copyright text-muted">
-                   CopyRight &copy; 2016-2021 <a target="_blank" href="https://github.com/zfb132">FB Zhang</a> | <script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1279113881&web_id=1279113881"></script><br>Modified by <a target="_blank" href="https://github.com/BruceZhaoR">BruceZhaoR</a>.<br> Theme by <a target="_blank" href="https://github.com/Huxpro">Hux</a>.<br>
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span> | <iframe style="margin-left: 2px; margin-bottom:-5px;"
-              frameborder="0" scrolling="0" width="100px" height="20px"
-              src="https://ghbtns.com/github-btn.html?user=zfb132&repo=zfb132.github.com&type=star&count=true" >
-          </iframe>
+		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br> 备案号：待填写
                 </p>
             </div>
         </div>
