删除评论框

--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -135,15 +135,15 @@ layout: default
                     <li class="next disabled"><a>下一篇 &rarr;</a>
                     {% endif %}
                 </ul>
-
+<!--
                 {% if site.disqus %}
-                <!-- disqus 评论框 start -->
+                 disqus 评论框 start -- >
                 <div class="comment">
                     <div id="disqus_thread" class="disqus-thread"></div>
                 </div>
-                <!-- disqus 评论框 end -->
+                < !-- disqus 评论框 end 
                 {% endif %}
-
+-->
             </div>
     </div>
 		<!-- Sidebar Container -->
