--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
                 <div class="post-heading">
                     <h1>{{ page.title }}</h1>
                     {% comment %}
-                        always create a h2 for keeping the margin , Zfb
+                        always create a h2 for keeping the margin , Zfx
                     {% endcomment %}
                     {% comment %} if page.subtitle {% endcomment %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
@@ -55,7 +55,7 @@ layout: default
 				</p>
 			        <script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
 <script>
-    AV.initialize("gQJjjB93fxATN0W6cmGdlOrW-gzGzoHsz", "IcwsDtnTDwM6gdkJfLNJTcck");
+    AV.initialize("b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz", "Dx4XP9hYgFhPhBsPEjf50Is0");
     var name='Counter';
 
     function createRecord(Counter){
