--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,9 @@
                 </ul>
 				<style>p.copyright.text-muted {color: #bfbfbf;} </style>
 				<p class="copyright text-muted">
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br> 备案号：待填写
+          <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
+          </script>
+		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br>© 2021 | 访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span> | 备案号：待填写
                 </p>
             </div>
         </div>
