--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -110,7 +110,7 @@
       //document.write(y+"-"+m+"-"+d+"   "+h+":"+minute+":"+s);  
         }
       </script>
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br>© 2021 | 访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span> | <div id="show_time"></div> | 备案号：待填写
+		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br>© 2021 | 访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span> | <span id="show_time"></span> | 备案号：待填写
                 </p>
             </div>
         </div>
