--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,6 +80,7 @@
           </script>
     <script>  
       //这里代码多了几行，但是不会延迟显示，速度比较好，格式可以自定义，是理想的时间显示
+      //实时时间的显示<span id="show_time"></span>
       setInterval("fun(show_time)",1);
       function fun(timeID){ 
       var date = new Date();  //创建对象  
