--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,15 @@
 </script>
 <!-- music↓-->
 <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css">
+<script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?c3462291b89cf3da802fd625f04c4915";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
 </head>
 
 <body ontouchstart="">
