--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 
 	<!-- 国产高速渲染 -->
 	<meta name="renderer" content="webkit">
-	<link rel="shortcut icon" href="/img/favicon.ico">
+	<link rel="shortcut icon" href="https://zfx521.gitee.io/img/favicon.ico">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.BASE_PATH }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.SEOTitle }}" href="{{ site.BASE_PATH }}/feed.xml">
 	<!-- Le styles -->
