--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -123,10 +123,10 @@
       </script>
       <script>
         setInterval("fun(show_year)",1);
-        function fun(timeID){ 
+        function fun(timeyear){ 
           var date = new Date();  //创建对象  
           var y = date.getFullYear();     //获取年份  
-          document.getElementById(timeID.id).innerHTML =  "@2021-"+y;
+          document.getElementById(timeyear.id).innerHTML =  "@2021-"+y;
         }
       </script>
 		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br><span id="show_year"></span> | <a href="http://tongji.baidu.com/web/welcome/ico?s=c3462291b89cf3da802fd625f04c4915" style="color: #bfbfbf" target="_blank">访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span></a> | <span id="show_time"></span> | 备案号：豫ICP备2021032942号
