--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,14 +120,31 @@
       document.getElementById(timeID.id).innerHTML =  y+"-"+m+"-"+d+"   "+h+":"+minute+":"+s+"  "+ww;
       //document.write(y+"-"+m+"-"+d+"   "+h+":"+minute+":"+s);  
         }
-        setInterval("yeara(show_year)",1000);
+        setInterval("yeara(show_year)",100);
         function yeara(timeyear){ 
           var d1ate = new Date();  //创建对象  
           var year = d1ate.getFullYear();     //获取年份  
           document.getElementById(timeyear.id).innerHTML =  "@2021-"+year;
         }
+        setInterval("timeing(show_yxts)",100);
+        function timeing(show_yxts){ 
+          // 初始时间，月/日/年 时:分:秒
+        X = new Date("11/14/2021 11:50:00");
+        Y = new Date();
+        T = (Y.getTime()-X.getTime());
+        M = 24*60*60*1000;
+        a = T/M;
+        A = Math.floor(a);
+        b = (a-A)*24;
+        B = Math.floor(b);
+        c = (b-B)*60;
+        C = Math.floor((b-B)*60);
+        D = Math.floor((c-C)*60);
+        //信息写入到DIV中 
+          document.getElementById(timeyear.id).innerHTML = "本站已运行: "+A+"天"+B+"小时"+C+"分"+D+"秒";
+        }
       </script>
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br><span id="show_year"></span> | <a href="http://tongji.baidu.com/web/welcome/ico?s=c3462291b89cf3da802fd625f04c4915" style="color: #bfbfbf" target="_blank">访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span></a> | <span id="show_time"></span> | 备案号：豫ICP备2021032942号
+		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br><span id="show_year"></span> | <a href="http://tongji.baidu.com/web/welcome/ico?s=c3462291b89cf3da802fd625f04c4915" style="color: #bfbfbf" target="_blank">访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span></a> | 备案号：{{ site.bah }} <br> <span id="show_time"></span> | <span id="show_yxts"></span>
                 </p>
             </div>
         </div>
