--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -141,10 +141,10 @@
           C = Math.floor((b-B)*60);
           D = Math.floor((c-C)*60);
           //信息写入到DIV中 
-          document.getElementById(timeyear.id).innerHTML = "本站已运行: "+A+"天"+B+"小时"+C+"分"+D+"秒";
+          document.getElementById(show_yxts.id).innerHTML = "本站已运行: "+A+"天"+B+"小时"+C+"分"+D+"秒";
         }
       </script>
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br><span id="show_year"></span> | <a href="http://tongji.baidu.com/web/welcome/ico?s=c3462291b89cf3da802fd625f04c4915" style="color: #bfbfbf" target="_blank">访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span></a> | 备案号：{{ site.bah }} <br> <span id="show_time"></span> | <span id="show_yxts"></span>
+		<span class="label label-primary label-md"><strong>转载请标明作者和出处</strong></span><br><span id="show_year"></span> | <a href="http://tongji.baidu.com/web/welcome/ico?s=c3462291b89cf3da802fd625f04c4915" style="color: #bfbfbf" target="_blank">访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span></a> | <span id="show_yxts"></span> <br> <span id="show_time"></span> | 备案号：{{ site.bah }}
                 </p>
             </div>
         </div>
