--- a/assets/resources/font-awesome/css/font-awesome.css
+++ b/assets/resources/font-awesome/css/font-awesome.css
@@ -2084,3 +2084,9 @@
 .fa-percent:before {
   content: "\f295";
 }
+.fa-qq-square:before {
+  content: "\f296";
+}
+.fa-gitee-square:before {
+  content: "\f297";
+}
