--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -93,14 +93,7 @@ layout: default
                             {% if site.qq %}
 							<li>
 								<a target="_blank" href="https://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">
-									<i class="fa fa-qq-square fa-2x" aria-hidden="true"></i>
-								</a>
-							</li>
-							{% endif %}
-                            {% if site.gitee_username %}
-							<li>
-								<a target="_blank" href="https://gitee.com/{{ site.gitee_username }}">
-									<i class="fa fa-gitee-square fa-2x" aria-hidden="true"></i>
+									<i class="fa fa-qq fa-2x" aria-hidden="true"></i>
 								</a>
 							</li>
 							{% endif %}
