--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,30 +61,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <ul class="list-inline text-center">
-                    {% if site.RSS %}
-                    <li>
-                        <a href="{{site.base_PATH}}/{{site.RSS}}" >
-                            <i class="fa fa-rss fa-2x" aria-hidden="true"></i>
-                        </a>
-                    </li>
-                    {% endif %}
-					{% if site.email %}
-                    <li>
-                        <a target="_blank" href="mailto:{{ site.email }}">
-							<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
-						</a>
-					</li>
-					{% endif %}
-					{% if site.linkedin %}
-					<li>
-						<a target="_blank" href="https://linkedin.com/in/{{ site.linkedin }}">
-							<i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-						</a>
-					</li>
-					{% endif %}
-                </ul>
-				<style>p.copyright.text-muted {color: #bfbfbf;} </style>
+				<style>p.copyright.text-muted {color: #bfbfbf;font-size: 20px;} </style>
 				<p class="copyright text-muted">
           <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js">
           </script>
