--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -99,7 +99,7 @@ layout: default
 							{% endif %}
                             {% if site.RSS %}
                             <li>
-                            <a href="{{site.base_PATH}}/{{site.RSS}}" >
+                            <a target="_blank" href="{{site.base_PATH}}/{{site.RSS}}" >
                             <i class="fa fa-rss fa-2x" aria-hidden="true"></i>
                             </a>
                             </li>
