--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -53,7 +53,7 @@ layout: default
 
 
 				</p>
-			        <script src="https://unpkg.com/leancloud-storage@4.12.2/dist/av-min.js"></script>
+			        <script src="//cdn1.lncld.net/static/js/2.5.0/av-min.js"></script>
 <script>
     AV.initialize("b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz", "Dx4XP9hYgFhPhBsPEjf50Is0");
     var name='Counter';
