--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,7 +58,7 @@ layout: default
     AV.init({
       appId: "b6xbX21qO1uIQJAVuRHfOXQe-gzGzoHsz",
       appKey: "Dx4XP9hYgFhPhBsPEjf50Is0",
-      serverURL: "https://leancloud.zfx521.top"
+      serverURL: "https://leancloud.zfxkj.top"
     });
     var name='Counter';
 
