--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-  <meta name="baidu-site-verification" content="code-lNnlmPfaZ6" />
+  <meta name="baidu-site-verification" content="code-gFiEU8a3lM" />
 	<title>{{ page.title }} | {{ site.SEOTitle }}</title>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
