--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,9 @@
 
   gtag('config', 'G-GER6JGHQSF');
 </script>
+<!-- Cloudflare Web Analytics -->
+<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4731b4f01bbf4c67898d64a4c48c3cea"}'></script>
+<!-- End Cloudflare Web Analytics -->
 <!-- music↓-->
 <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css">
 <script>
