--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,15 +39,6 @@
 <!-- End Cloudflare Web Analytics -->
 <!-- music↓-->
 <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css">
-<script>
-  var _hmt = _hmt || [];
-  (function() {
-    var hm = document.createElement("script");
-    hm.src = "https://hm.baidu.com/hm.js?c3462291b89cf3da802fd625f04c4915";
-    var s = document.getElementsByTagName("script")[0]; 
-    s.parentNode.insertBefore(hm, s);
-  })();
-  </script>
 </head>
 
 <body ontouchstart="">
@@ -217,7 +208,7 @@
         })
     }
 </script>
-<!-- 百度自动推送链接 -->
+<!-- 百度自动推送链接 
 <script>
 (function(){
     var bp = document.createElement('script');
@@ -231,7 +222,7 @@
     var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(bp, s);
 })();
-</script>
+</script>-->
 <!--music下-->
 <div id="QPlayer">
   <div id="pContent">
