--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,18 +25,18 @@
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 	<script type="text/javascript" src="//cdn.bootcdn.net/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER6JGHQSF"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GER6JGHQSF"></script> 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-GER6JGHQSF');
-</script>
-<!-- Cloudflare Web Analytics -->
+</script> -->
+<!-- Cloudflare Web Analytics 
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4731b4f01bbf4c67898d64a4c48c3cea"}'></script>
-<!-- End Cloudflare Web Analytics -->
+End Cloudflare Web Analytics -->
 <!-- music↓-->
 <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css">
 </head>
