修复图标问题，取消直链图库使用

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<!-- Enable responsive viewport -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="baidu-site-verification" content="fkVXkUbHNR" />
-        <meta name="keywords" content="学习笔记, 博客, Python, zfx, ZFX521, Android, Web">
+        <meta name="keywords" content="学习笔记, 博客, Python, zfx, zfxkj, ubuntu, debian, docker, nginx, frp, Android, Web">
 
 	<!-- 国产高速渲染 -->
 	<meta name="renderer" content="webkit">
@@ -21,7 +21,9 @@
 	<link rel="alternate" type="application/rss+xml" title="{{ site.SEOTitle }}" href="{{ site.BASE_PATH }}/feed.xml">
 	<!-- Le styles -->
 	<link href="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<link href="//cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<!-- <link href="//cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <link href="{{ site.BASE_PATH }}/assets/css/fontawesome.css" rel="stylesheet">
+  <link href="{{ site.BASE_PATH }}/assets/css/brands.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 	<script type="text/javascript" src="//cdn.bootcdn.net/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -38,7 +40,7 @@
 <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "4731b4f01bbf4c67898d64a4c48c3cea"}'></script>
 End Cloudflare Web Analytics -->
 <!-- music↓-->
-<link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css">
+<!-- <link rel="stylesheet" href="https://zfx521.gitee.io/css/player.css"> -->
 </head>
 
 <body ontouchstart="">
