添加字体文件，修复图标bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,8 +22,9 @@
 	<!-- Le styles -->
 	<link href="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<!-- <link href="//cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
-  <link href="{{ site.BASE_PATH }}/assets/css/fontawesome.css" rel="stylesheet">
-  <link href="{{ site.BASE_PATH }}/assets/css/brands.css" rel="stylesheet">
+  <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/fontawesome.css" rel="stylesheet">
+  <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/brands.css" rel="stylesheet">
+  <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/solid.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 	<script type="text/javascript" src="//cdn.bootcdn.net/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -175,7 +176,7 @@ End Cloudflare Web Analytics -->
 <!-- back-to-top -->
 <div id="back-top">
   <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
-  <i class="fa fa-chevron-up" aria-hidden="true"></i>
+  <i class="fa-solid fa-arrow-up fa-2xs"></i>
   </a>
 </div>
 <!-- <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery-1.8.3.js"></script> -->
