--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,7 +176,7 @@ End Cloudflare Web Analytics -->
 <!-- back-to-top -->
 <div id="back-top">
   <a href="#section" data-toggle="tooltip" data-placement="top" title="top">
-  <i class="fa-solid fa-arrow-up fa-2xs"></i>
+  <i class="fa-solid fa-arrow-up"></i>
   </a>
 </div>
 <!-- <script type="text/javascript" src="{{ site.BASE_PATH }}/assets/resources/jquery/jquery-1.8.3.js"></script> -->
