--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -55,49 +55,49 @@ layout: default
                             {% if site.weibo_username %}
 							<li>
 								<a target="_blank" href="http://weibo.com/{{ site.weibo_username }}">
-									<i class="fa-brands fa-weibo fa-2xs"></i>
+									<i class="fa-brands fa-weibo"></i>
 								</a>
 							</li>
 							{% endif %}
                             {% if site.zhihu_username %}
                             <li>
                                 <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
-                                    <i class="fa-brands fa-zhihu fa-2xs"></i>
+                                    <i class="fa-brands fa-zhihu"></i>
                                 </a>
                             </li>
                             {% endif %}
                             {% if site.facebook_username %}
                             <li>
                                 <a target="_blank" href="https://www.facebook.com/{{ site.facebook_username }}">
-									<i class="fa-brands fa-facebook fa-2xs"></i>
+									<i class="fa-brands fa-facebook"></i>
                                 </a>
                             </li>
                             {% endif %}
 							{% if site.github_username %}
 							<li>
 								<a target="_blank" href="https://github.com/{{ site.github_username }}">
-									<i class="fa-brands fa-github fa-2xs"></i>
+									<i class="fa-brands fa-github"></i>
 								</a>
 							</li>
 							{% endif %}
                             {% if site.qq %}
 							<li>
 								<a target="_blank" href="https://wpa.qq.com/msgrd?v=3&uin={{ site.qq }}&site=qq&menu=yes">
-									<i class="fa-brands fa-qq fa-2xs"></i>
+									<i class="fa-brands fa-qq"></i>
 								</a>
 							</li>
 							{% endif %}
                             {% if site.RSS %}
                             <li>
                             <a target="_blank" href="{{site.base_PATH}}/{{site.RSS}}" >
-                                <i class="fa-solid fa-rss fa-2xs"></i>
+                                <i class="fa-solid fa-rss"></i>
                             </a>
                             </li>
                             {% endif %}
 					        {% if site.email %}
                             <li>
                             <a target="_blank" href="mailto:{{ site.email }}">
-                                <i class="fa-solid fa-envelope fa-2xs"></i>
+                                <i class="fa-solid fa-envelope"></i>
 						    </a>
 					        </li>
 					        {% endif %}
