--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -71,7 +71,7 @@ layout: default
 					<hr>
 					{% unless page.categories == empty %}
 					<ul class="tag_box list-unstyled list-inline">
-					<li><i class="fa-solid fa-folder-open"></i></li>
+					<li><i class="fa-solid fa-folder-open fa-xl"></i></li>
 					{% assign categories_list = page.categories %}
 					{% if categories_list.first[0] == null %}
 						{% for category in categories_list %}
@@ -92,7 +92,7 @@ layout: default
 
 					{% unless page.tags == empty %}
 					<ul class="list-inline">
-					<li><i class="fa-solid fa-tags"></i></li>
+					<li><i class="fa-solid fa-tags fa-xl"></i></li>
 					{% assign tags_list = page.tags %}
 					{% if tags_list.first[0] == null %}
 						{% for tag in tags_list %}
