修改图标大小

--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -2,7 +2,6 @@
 layout: default
 ---
 
-
 <!-- Post Header -->
 <style type="text/css">
     header.intro-header{
@@ -15,13 +14,13 @@ layout: default
         border: 0;
     }
     /* Override Nav Style */
-    {% if page.navcolor == "invert" %}
+    {%- if page.navcolor == "invert" -%}
         .navbar-custom .nav li a,
         .navbar-custom .nav li a:hover,
         .navbar-custom .navbar-brand,
         .navbar-custom .navbar-brand:hover {color:#777;}
         .navbar-default .navbar-toggle .icon-bar {background-color:#777;}
-    {% endif %}
+    {%- endif -%}
 </style>
 <header class="intro-header" >
     <iframe src="{{page.iframe}}"/>
@@ -83,7 +82,7 @@ layout: default
 					{% else %}
 						{% for category in categories_list %}
 							<li><a href="{{ site.BASE_PATH }}/{{ site.categories_path }}#{{ category[0] }}-ref">
-								{{ category[0] | join: "/" }} <span>/{{ category[1].size }})</span>
+								{{ category[0] | join: "/" }} <span>({{ category[1].size }})</span>
 							</a></li>
 						{% endfor %}
 					{% endif %}
