开启搜索,修复部分bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,17 @@
 
 	<!-- 国产高速渲染 -->
 	<meta name="renderer" content="webkit">
-	<link rel="shortcut icon" href="https://zfx521.gitee.io/img/favicon.ico">
+	<link rel="shortcut icon" href="{{ site.icon}}">
 	<link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.BASE_PATH }}">
 	<link rel="alternate" type="application/rss+xml" title="{{ site.SEOTitle }}" href="{{ site.BASE_PATH }}/feed.xml">
 	<!-- Le styles -->
 	<link href="//cdn.bootcdn.net/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<!-- <link href="//cdn.bootcdn.net/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"> -->
+  <!-- start图标 -->
   <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/fontawesome.css" rel="stylesheet">
   <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/brands.css" rel="stylesheet">
   <link href="{{ site.BASE_PATH }}/assets/css/fontawesome/css/solid.css" rel="stylesheet">
+  <!-- over图标 -->
 	<link href="{{ site.BASE_PATH }}/assets/resources/syntax/syntax.css" rel="stylesheet">
 	<link href="{{ site.BASE_PATH }}/assets/css/style.css" rel="stylesheet">
 	<script type="text/javascript" src="//cdn.bootcdn.net/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
