--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -34,7 +34,7 @@ layout: default
                         {% comment %} if page.subtitle {% endcomment %}
                         <h2 class="subheading">{{ page.subtitle }}</h2>
                         {% comment %} endif {% endcomment %}
-                        <span class="meta">Posted by {% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %} on {{ page.date | date: "%B %-d, %Y" }}</span>
+                        <span class="meta">作者：{% if page.author %}{{ page.author }}{% else %}{{ site.author }}{% endif %} 发表时间：{{ page.date | date: "%Y-%m-%d" }}</span>
                     </div>
                 </div>
             </div>
