添加每日一言，删除冗余内容

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,7 +120,7 @@ End Cloudflare Web Analytics -->
           document.getElementById(show_yxts.id).innerHTML="本站已运行: "+daysold+"天"+hrsold+"小时"+minsold+"分"+seconds+"秒" ;
         }
       </script>
-		<span class="label label-primary label-md"><strong>转载请标明作者和出处<img src="https://img.shields.io/github/stars/zfxkj/zfxkj.github.io?color=blue&label=Github%20Stars" /></strong></span><br><span id="show_year"></span> | 访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span> <br> <span id="show_yxts"></span> <br> 今天：<span id="show_time"></span> <br> <a href="https://beian.miit.gov.cn/" style="color: #bfbfbf" target="_blank"> 备案号：{{ site.bah }} </a>
+		<span id="show_year"></span> | 访问量：<span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"></span></span> <br> <span id="show_yxts"></span> <br> 今天：<span id="show_time"></span> <br> <a href="https://beian.miit.gov.cn/" style="color: #bfbfbf" target="_blank"> 备案号：{{ site.bah }} </a>
                 </p>
             </div>
         </div>
