--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -46,8 +46,38 @@ layout: default
                         {% if site.sidebar-avatar %}
                             <img src="{{site.sidebar-avatar}}" />
                         {% endif %}
-                        {% if site.sidebar-about-description %}
-                            <p>{{site.sidebar-about-description}}</p>
+                        {% if site.everyday-yan == true %}
+                            <p id="hitokoto">每日一言获取中...
+                            </p>
+                            <script>
+                                fetch('https://v1.hitokoto.cn')
+                                  .then(response => response.json())
+                                  .then(data => {
+                                    const hitokoto = document.getElementById('hitokoto')
+                                    hitokoto.innerText = data.hitokoto
+                                  })
+                                  .catch(console.error)
+                              </script>
+                        {% else %}
+                            {% if site.sidebar-about-description %}
+                                <p>{{site.sidebar-about-description}}</p>
+                            {% endif %}
+                        {% if site.everyday-yan == true %}
+                            <p id="hitokoto">每日一言获取中...
+                            </p>
+                            <script>
+                                fetch('https://v1.hitokoto.cn')
+                                  .then(response => response.json())
+                                  .then(data => {
+                                    const hitokoto = document.querySelector('hitokoto')
+                                    hitokoto.innerText = data.hitokoto
+                                  })
+                                  .catch(console.error)
+                              </script>
+                        {% else %}
+                            {% if site.sidebar-about-description %}
+                                <p>{{site.sidebar-about-description}}</p>
+                            {% endif %}
                         {% endif %}
                         <!-- SNS Link -->
                         <ul class="list-inline">
