删除冗余内容修复bug

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -62,7 +62,7 @@ layout: default
                             {% if site.sidebar-about-description %}
                                 <p>{{site.sidebar-about-description}}</p>
                             {% endif %}
-                        {% if site.everyday-yan == true %}
+                        {% if site.everyday-yan %}
                             <p id="hitokoto">每日一言获取中...
                             </p>
                             <script>
